Fix CBMC proof Makefile variable names
This commit fixes up the variable names in each of the individual proof
Makefiles so that they conform to the variable names in the template
Makefile.common.

This fixup was done automatically by running the following script:

    #!/usr/bin/env python3

    import logging
    import os
    import re
    import sys
    import textwrap

    def entry(match):
        return textwrap.dedent(f"""\
            HARNESS_ENTRY = {match["entry"]}
            HARNESS_FILE = $(HARNESS_ENTRY)_harness.c

            PROOF_SOURCES += $(HARNESS_FILE)""")

    def common_source(m):
        return f"PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/{m['src']}.c"

    def common_uninline(m):
        return f"PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/{m['src']}.c"

    def common_helper_source(m):
        return f"PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/{m['src']}.c"

    def common_stub(m):
        return f"PROOF_SOURCES += $(COMMON_PROOF_STUB)/{m['src']}.c"

    def e_sdk_stub(m):
        return f"PROOF_SOURCES += $(PROOF_STUB)/{m['src']}.c"

    def e_sdk_source(m):
        return f"PROJECT_SOURCES += $(SRCDIR)/{m['src']}.c"

    def e_sdk_helper_source(m):
        return f"PROOF_SOURCES += $(PROOF_SOURCE)/{m['src']}.c"

    def remove_function_body(m):
        return f"REMOVE_FUNCTION_BODY += {m['fun']}"

    def delete(m):
        return ""

    def pats():
        ret = {
            r"^ENTRY\s*=\s*(?P<entry>\w+)":
                entry,
            r"^DEPENDENCIES\s*\+=\s*"
            r"\$\(COMMON_HELPERDIR\)/stubs/(?P<src>[-/\.\w]+)\.(c|(goto))":
                common_stub,
            r"^DEPENDENCIES\s*\+=\s*"
            r"\$\(SRCDIR\)/c-common-src/(?P<src>[-/\.\w]+)\.(c|(goto))":
                common_source,
            r"^DEPENDENCIES\s*\+=\s*"
            r"\$\(SRCDIR\)/c-common-helper-src/(?P<src>[-/\.\w]+)\.(c|(goto))":
                common_helper_source,
            r"^DEPENDENCIES\s*\+=\s*"
            r"\$\(SRCDIR\)/c-en

--- a/verification/cbmc/proofs/aws_cryptosdk_alg_props/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_alg_props/Makefile
@@ -13,18 +13,17 @@
 
 ###########
 
-
-
-
-
 UNWINDSET +=
 
 CBMCFLAGS +=
 
-ENTRY = aws_cryptosdk_alg_props_harness
+HARNESS_ENTRY = aws_cryptosdk_alg_props_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher.goto
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher_openssl.goto
+PROOF_SOURCES += $(HARNESS_FILE)
+
+PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
+PROJECT_SOURCES += $(SRCDIR)/source/cipher_openssl.c
 
 ###########
 
