--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_release/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_release/Makefile
@@ -11,37 +11,35 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-
-
-
-
 # Expect runtime for this proof is 8 seconds
 
 CBMCFLAGS +=
 
 # aws_atomic_fetch_sub_explicit receives a volatile input, which is always model
 # as non-deterministic in CBMC; thus, we need a deterministic stub for it
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_fetch_sub_explicit.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_fetch_sub_explicit
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_fetch_sub_explicit.c
+REMOVE_FUNCTION_BODY += aws_atomic_fetch_sub_explicit
 
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_load_int.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_load_int
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_load_int.c
+REMOVE_FUNCTION_BODY += aws_atomic_load_int
 
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_priv_xlate_order.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_priv_xlate_order
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_priv_xlate_order.c
+REMOVE_FUNCTION_BODY += aws_atomic_priv_xlate_order
 
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/error.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/materials.c
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
+PROJECT_SOURCES += $(SRCDIR)/source/materials.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-ENTRY = aws_cryptosdk_keyring_release_harness
+HARNESS_ENTRY = aws_cryptosdk_keyring_release_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-REMOVE_FUNCTION_BODY += --remove-function-body hash_proof_destroy_noop
-REMOVE_FUNCTION_BODY += --remove-function-body aws_raise_error_private
+PROOF_SOURCES += $(HARNESS_FILE)
+
+REMOVE_FUNCTION_BODY += hash_proof_destroy_noop
+REMOVE_FUNCTION_BODY += aws_raise_error_private
 
 UNWINDSET +=
 
