--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_retain/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_retain/Makefile
@@ -11,35 +11,33 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-
-
-
-
 # Expect runtime for this proof is 10sec
 
 CBMCFLAGS +=
 
 # aws_atomic_fetch_add_explicit receives a volatile input, which is always model
 # as non-deterministic in CBMC; thus, we need a deterministic stub for it
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_fetch_add_explicit.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_fetch_add_explicit
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_fetch_add_explicit.c
+REMOVE_FUNCTION_BODY += aws_atomic_fetch_add_explicit
 
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_load_int.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_load_int
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_load_int.c
+REMOVE_FUNCTION_BODY += aws_atomic_load_int
 
-ABSTRACTIONS += $(LINKFARM)/helper-stubs/aws_atomic_priv_xlate_order.c
-REMOVE_FUNCTION_BODY += --remove-function-body aws_atomic_priv_xlate_order
+PROOF_SOURCES += $(PROOF_STUB)/aws_atomic_priv_xlate_order.c
+REMOVE_FUNCTION_BODY += aws_atomic_priv_xlate_order
 
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/error.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/materials.c
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-uninline/atomics.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
+PROJECT_SOURCES += $(SRCDIR)/source/materials.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/atomics.c
 
-ENTRY = aws_cryptosdk_keyring_retain_harness
+HARNESS_ENTRY = aws_cryptosdk_keyring_retain_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
+
+PROOF_SOURCES += $(HARNESS_FILE)
 
 UNWINDSET +=
 
