--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_init/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_init/Makefile
@@ -12,25 +12,24 @@
 # limitations under the License.
 
 ###########
- 
-
-
-
 
 CBMCFLAGS +=
 
-DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.c
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.c
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/error.c
-DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.c
-DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/keyring_trace.c
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
+PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
+PROJECT_SOURCES += $(SRCDIR)/source/keyring_trace.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-ENTRY = aws_cryptosdk_keyring_trace_init_harness
+HARNESS_ENTRY = aws_cryptosdk_keyring_trace_init_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-UNWINDSET += 
+PROOF_SOURCES += $(HARNESS_FILE)
+
+UNWINDSET +=
 
 ###########
 
