--- a/verification/cbmc/proofs/aws_cryptosdk_serialize_frame/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_serialize_frame/Makefile
@@ -12,21 +12,20 @@
 # limitations under the License.
 
 ###########
- 
 
+HARNESS_ENTRY = aws_cryptosdk_serialize_frame_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
+PROOF_SOURCES += $(HARNESS_FILE)
 
-
-ENTRY = aws_cryptosdk_serialize_frame_harness
-
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/error.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/framefmt.c
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
+PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
+PROJECT_SOURCES += $(SRCDIR)/source/framefmt.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
 ###########
 
