Fix variable names in CBMC datastructure Makefiles

--- a/verification/cbmc/proofs/Makefile.aws_byte_buf
+++ b/verification/cbmc/proofs/Makefile.aws_byte_buf
@@ -1,4 +1,4 @@
-# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You may not use
 # this file except in compliance with the License. A copy of the License is
@@ -12,10 +12,6 @@
 # limitations under the License.
 
 ##########
-# if Makefile.local exists, use it. This provides a way to override the defaults 
-sinclude ../Makefile.local
-#otherwise, use the default values
-include ../Makefile.local_default
 
 # Sufficently long to get full coverage on the aws_byte_buf and aws_byte_cursor APIs
 # short enough that all proofs complete in less than a minute
