Use Litani to build CBMC proofs
This commit submodules in the Litani build tool, hosted at
https://github.com/awslabs/aws-build-accumulator
Litani is used to build all CBMC proofs in parallel, and to interface
with a new and more robust CI for proofs. It also gives users an
improved proof dashboard that gets continuously updated while running
proofs.

--- a/.cbmc-batch/jobs/Makefile.local_default
+++ b/.cbmc-batch/jobs/Makefile.local_default
@@ -28,4 +28,7 @@ COMMON_HELPERDIR ?= $(COMMONDIR)/.cbmc-batch
 SDKDIR ?= $(abspath ../../..)
 HELPERDIR ?= $(SDKDIR)/.cbmc-batch
 
+CWD = $(abspath .)
+GOTO_DIR = $(CWD)/gotos
+
 addone = $(shell echo $$(( $(1) + 1)))
