--- a/.cbmc-batch/jobs/aws_cryptosdk_aes_gcm_encrypt/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_aes_gcm_encrypt/Makefile
@@ -26,7 +26,7 @@ CBMCFLAGS +=
 
 ENTRY = aws_cryptosdk_aes_gcm_encrypt_harness
 
-DEPENDENCIES += $(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.goto
+DEPENDENCIES += $(GOTODIR)/$(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.goto
 DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.goto
