--- a/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_keyring_trace_add_record/Makefile
@@ -30,7 +30,7 @@ DEPENDENCIES +=	$(SRCDIR)/c-common-src/string.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/keyring_trace.c
 DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/utils.c
-DEPENDENCIES += $(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.c
+DEPENDENCIES += $(GOTODIR)/$(COMMON_HELPERDIR)/stubs/memcpy_override_havoc.c
 DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
 ###########
 
