chore: Add static test vectors as ctest test

--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -109,6 +109,8 @@ if (AWS_ENC_SDK_KNOWN_GOOD_TESTS)
     file(MAKE_DIRECTORY ${TEST_VECTORS_DIRECTORY})
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ${TEST_VECTORS_ZIP_FILE}
         WORKING_DIRECTORY ${TEST_VECTORS_DIRECTORY})
+
+    aws_add_test(static_test_vectors ${CMAKE_CURRENT_BINARY_DIR}/static_test_vectors ${TEST_VECTORS_DIRECTORY})
 else()
     message(STATUS "Static known good tests off")
 endif()
