Ensure “known good tests” are on for all builds

--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -103,6 +103,8 @@ if (AWS_ENC_SDK_KNOWN_GOOD_TESTS)
         )
 
     # Also unzip the test vectors from the aws-encryption-sdk-test-vectors submodule
+    # TODO-RS: If desired, we can use a custom target to avoid doing this
+    # on every build when the zip hasn't changed.
     message(STATUS "Unzipping test vectors")
     set(TEST_VECTORS_ZIP_FILE ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_vectors/aws-encryption-sdk-test-vectors/vectors/awses-decrypt/python-1.3.8.zip)
     set(TEST_VECTORS_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/python-1.3.8-test-vectors)
