--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -44,6 +44,6 @@ jobs:
         run: |
           mkdir build-aws-encryption-sdk-c || true
           cd build-aws-encryption-sdk-c
-          cmake -G Xcode -DBUILD_SHARED_LIBS=ON -DOPENSSL_ROOT_DIR="/usr/local/opt/${OPENSSL_VERSION}" ../
+          cmake -G Xcode -DBUILD_SHARED_LIBS=ON -DAWS_ENC_SDK_KNOWN_GOOD_TESTS=ON -DOPENSSL_ROOT_DIR="/usr/local/opt/${OPENSSL_VERSION}" ../
           xcodebuild -target ALL_BUILD
           xcodebuild -scheme RUN_TESTS
