--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -52,4 +52,8 @@ jobs:
           cd build-aws-encryption-sdk-c
           cmake -G Xcode -DBUILD_SHARED_LIBS=ON -DAWS_ENC_SDK_KNOWN_GOOD_TESTS=ON -DOPENSSL_ROOT_DIR="/usr/local/opt/${OPENSSL_VERSION}" ../
           xcodebuild -target ALL_BUILD
-          ./aws-encryption-sdk-cpp/Debug/static_test_vectors ./aws-encryption-sdk-cpp/python-1.3.8-test-vectors
+          xcodebuild -scheme RUN_TESTS
+
+      - uses: actions/upload-artifact@v2
+        with:
+          path: build-aws-encryption-sdk-c/aws_sdk_*.log
