Suppress unzip process output

--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -111,12 +111,15 @@ if (AWS_ENC_SDK_KNOWN_GOOD_TESTS)
     file(MAKE_DIRECTORY ${TEST_VECTORS_DIRECTORY})
     execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ${TEST_VECTORS_ZIP_FILE}
         WORKING_DIRECTORY ${TEST_VECTORS_DIRECTORY}
-        RESULT_VARIABLE _exit_code)
+        RESULT_VARIABLE _exit_code
+        # The output from the subprocess seems to fill a buffer and cause cmake
+        # to crash on Ubuntu, so don't remove this!
+        OUTPUT_QUIET)
     if(${_exit_code})
         message(FATAL_ERROR "Unzipping test vectors failed")
     endif()
 
-    # aws_add_test(static_test_vectors ${CMAKE_CURRENT_BINARY_DIR}/static_test_vectors ${TEST_VECTORS_DIRECTORY})
+    aws_add_test(static_test_vectors ${CMAKE_CURRENT_BINARY_DIR}/static_test_vectors ${TEST_VECTORS_DIRECTORY})
 else()
     message(STATUS "Static known good tests off")
 endif()
